--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>portofolio | Tangguh</title>
+    <link rel="website icon"type="jpg" href="logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&family=Oswald:wght@700&display=swap" rel="stylesheet">
 
