--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <p class="green-text">Hi, my name is</p>
         <p class="gray-text">TANGGUH SARWONO</p>
         <p class="white-text">I AM ELECTRICAL ENGINEERING</p>
-        <p class="additional-text">With a passion for innovation and a keen eye for problem-solving, I strive to push the boundaries in the field of Electrical Engineering. I believe in the power of technology to change the world, and I'm committed to contributing to that change through my expertise.</p>
+        <p class="additional-text">Jurusan Teknik Listrik. Seorang yang cekatan, sigap, dapat dan diandalkan, 
+          mampu bekerja dalam tim dan dapat berkomunikasi dengan baik.</p>
         <button class="contact-button">Contact Me</button>
       </div>
     </div>
@@ -65,10 +66,9 @@
       <div class="about-container">
         <div class="container-title">About Me</div>
         <div class="container-text">
-            I am a strong advocate for open source, and I am always interested in working on new projects with new people. Do check out my repositories and feel free to reach out on WhatsApp or email if you would like to collaborate on any project.
+          Saya seorang pendukung kuat open source, dan saya selalu tertarik mengerjakan proyek baru dengan orang-orang baru. Silakan periksa repositori saya dan jangan ragu untuk menghubungi WhatsApp atau email jika Anda mau. Saya seorang pendukung kuat open source, dan saya selalu tertarik mengerjakan proyek baru dengan orang-orang baru. Periksa repositori saya dan jangan ragu untuk menghubungi WhatsApp atau email jika Anda ingin berkolaborasi dalam proyek apa pun.
         </div>
     </div>
-
 
       <!-- Include ionicons -->
       <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.3/dist/ionicons.js"></script>
