--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -18,6 +18,7 @@
 
       <div class="sidebar">
         <ul>
+          <li class="judul-sidebar">MENU</li>
           <hr>
           <li><a href="#about" onclick="moveNotification(-272)"><ion-icon name="person-outline"></ion-icon> About</a></li>
           <li><a href="#experience" onclick="moveNotification(-228)"><ion-icon name="briefcase-outline"></ion-icon> Experience</a></li>
