--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -45,12 +45,12 @@
       <a class="cari"><ion-icon name="search"></ion-icon></a>
     </div>
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#cv" id="cv-button" title="Download CV">CV</a></li>
-      <div id="cv-background"></div>
+      <li><a class="about" href="#about">About</a></li>
+      <li><a class="Experience" href="#experience">Experience</a></li>
+      <li><a class="Projects" href="#projects">Projects</a></li>
+      <li><a class="contact" href="#contact">Contact</a></li>
+      <li><a class="cv" href="#cv" id="cv-button" title="Download CV">CV</a></li>
+      <div class="cv" id="cv-background"></div>
       <div>
     </ul>
   </div>
@@ -60,6 +60,7 @@
     <a class="close-search"><ion-icon name="close-circle-outline"></ion-icon></a>
   </div>
 </div>
+
 
 
 
