--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -57,7 +57,9 @@
   <!-- Search Box Container moved outside the navigation -->
   <div class="search-container">
     <input type="text" class="search-box" placeholder="Cari kata...">
-    <a class="close-search"><ion-icon name="close-circle-outline"></ion-icon></a>
+    <div class="close-search">
+      <ion-icon name="close-circle-outline"></ion-icon>
+    </div>
   </div>
 </div>
 
