--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -56,7 +56,7 @@
   </div>
   <!-- Search Box Container moved outside the navigation -->
   <div class="search-container">
-    <input type="text" class="search-box" placeholder="Cari kata...">
+    <input type="text" class="search-box" placeholder="">
     <div class="close-search">
       <ion-icon name="close-circle-outline"></ion-icon>
     </div>
