--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -100,7 +100,16 @@
         </div>
     </div>
 
+    <div class="container-photo">
+      <button class="expand-button">
+        <ion-icon name="expand-outline"></ion-icon>
+    </button>
+      <div class="container-border1"></div>
+      <div class="container-border2"></div>
+      <img src="PhotoH.png" alt="Photo" class="photo"/>
+  </div>
 
+    
       <!-- Include ionicons -->
       <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.3/dist/ionicons.js"></script>
     
