--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -100,13 +100,22 @@
         </div>
     </div>
 
+    <div class="overlay">
+      <div class="back-button">
+        <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
+        <span class="back-text">Kembali</span>
+    </div>
+  </div>
+  
+  <div class="parent-element">
     <div class="container-photo">
       <button class="expand-button">
         <ion-icon name="expand-outline"></ion-icon>
-    </button>
+      </button>
       <div class="container-border1"></div>
       <div class="container-border2"></div>
       <img src="PhotoH.png" alt="Photo" class="photo"/>
+    </div>
   </div>
 
     
