--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -118,6 +118,42 @@
     </div>
   </div>
 
+
+    <!----=========================================== Riwayat pendidikan ========================================================== -->
+<div class="container-carousel">
+  <div class="left-slide">
+      <ion-icon name="chevron-back-circle-outline"></ion-icon>
+  </div>
+      <div class="right-slide">
+      <ion-icon name="chevron-forward-circle-outline"></ion-icon>
+  </div>  
+  <div class="slide1">
+      <img src="SD.png" alt="Deskripsi Gambar">
+      <div class="slide1-container">
+          <div class="container-title">SDN Karangtalun 03</div>
+          <div class="container-text">
+            Saya memulai perjalanan pendidikan saya di SDN Karangtalun 03 pada tahun 2011. Selama tahun-tahun bersekolah di sini, saya tidak hanya memperoleh pengetahuan akademis dasar seperti matematika, bahasa, dan lainya, tetapi juga nilai-nilai moral yang penting. Saya aktif dalam kegiatan ekstrakurikuler seperti olahraga, seni, dan kegiatan sosial, yang membantu saya mengembangkan keterampilan kepemimpinan dan kerjasama.
+          </div>
+      </div>
+  </div>
+
+      <div class="slide2">
+        <img src="SMP.png" alt="Deskripsi Gambar">
+        <div class="slide1-container">
+            <div class="container-title">SMP NEGERI 08 CILACAP</div>
+            <div class="container-text">
+              Pada tahun 2017, saya mulai bersekolah di SMPN 08 Cilacap. Selama tiga tahun di sekolah ini, saya terus mengembangkan pengetahuan akademis dan keterampilan sosial. Saya aktif dalam berbagai kegiatan ekstrakurikuler, termasuk klub olahraga dan organisasi siswa.
+            </div>
+        </div>
+  </div>
+
+      <div class="slide3">
+          yo
+  </div>
+      <div class="slide4">
+          wi
+  </div>
+</div>
     
       <!-- Include ionicons -->
       <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.3/dist/ionicons.js"></script>
