--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -84,11 +84,11 @@
 <!----=========================================== Isi  ========================================================== -->
       <div class="container">
         <p class="green-text">Hi, my name is</p>
-        <p class="gray-text">TANGGUH SARWONO</p>
-        <p class="white-text">I AM ELECTRICAL ENGINEERING</p>
+        <p class="gray-text">Tangguh Sarwono.</p>
+        <p class="white-text">I build things for the web. </p>
         <p class="additional-text">Jurusan Teknik Listrik. Seorang yang cekatan, sigap, dapat dan diandalkan, 
           mampu bekerja dalam tim dan dapat berkomunikasi dengan baik.</p>
-        <button class="contact-button">Contact Me</button>
+        <button class="contact-button">Hubungi saya</button>
       </div>
     </div>
 
@@ -101,13 +101,14 @@
     </div>
 
     <div class="overlay">
-      <div class="back-button">
+      <div class="back-button" >
         <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
         <span class="back-text">Kembali</span>
     </div>
   </div>
   
-  <div class="parent-element">
+  
+  
     <div class="container-photo">
       <button class="expand-button">
         <ion-icon name="expand-outline"></ion-icon>
@@ -116,7 +117,6 @@
       <div class="container-border2"></div>
       <img src="PhotoH.png" alt="Photo" class="photo"/>
     </div>
-  </div>
 
 
     <!----=========================================== Riwayat pendidikan ========================================================== -->
