--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -11,10 +11,8 @@
 
 </head>
 <body>
- <!----=========================================== Toggel ========================================================== -->
-    <div class="menu-toggle">
-        <ion-icon name="menu-outline"></ion-icon>
-      </div>
+ <!----=========================================== Sidebar ========================================================== -->
+
 
       <div class="sidebar">
         <ul>
@@ -35,6 +33,16 @@
         </div>
 
       </div>
+
+<!----=========================================== Toggle ========================================================== -->
+<label>
+  <input type="checkbox" id="menuToggle" class="checkbox">
+  <div class="menu-toggle">
+      <span class="top_line common"></span>
+      <span class="middle_line common"></span>
+      <span class="bottom_line common"></span>
+  </div>
+</label>
       
 <!----=========================================== navigation ========================================================== -->
 <div class="nav-container">
