--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -57,7 +57,7 @@
       <li><a class="Experience" href="#experience">Experience</a></li>
       <li><a class="Projects" href="#projects">Projects</a></li>
       <li><a class="contact" href="#contact">Contact</a></li>
-      <li><a class="cv" href="#cv" id="cv-button" title="Download CV">CV</a></li>
+      <li><a class="cv" href="#cv" id="cv-button" title="Download CV">Resume</a></li>
       <div class="cv" id="cv-background"></div>
       <div>
     </ul>
