--- a/HalamanUtama/Index.html
+++ b/HalamanUtama/Index.html
@@ -127,41 +127,51 @@
     </div>
 
 
-    <!----=========================================== Riwayat pendidikan ========================================================== -->
-<div class="container-carousel">
-  <div class="left-slide">
-      <ion-icon name="chevron-back-circle-outline"></ion-icon>
+<!----=========================================== Tabs ========================================================== -->
+<div class=" container_tab">
+  <div class="container-title">Pendidikan</div>
+  <div class=" container_btn">
+    <button class="tab_btn" active >SD</button>
+    <button class="tab_btn">SMP</button>
+    <button class="tab_btn">SMK</button>
+    <button class="tab_btn">Kuliah</button>
+    <div class="underline"></div>
   </div>
-      <div class="right-slide">
-      <ion-icon name="chevron-forward-circle-outline"></ion-icon>
-  </div>  
-  <div class="slide1">
-      <img src="SD.png" alt="Deskripsi Gambar">
-      <div class="slide1-container">
-          <div class="container-title">SDN Karangtalun 03</div>
-          <div class="container-text">
-            Saya memulai perjalanan pendidikan saya di SDN Karangtalun 03 pada tahun 2011. Selama tahun-tahun bersekolah di sini, saya tidak hanya memperoleh pengetahuan akademis dasar seperti matematika, bahasa, dan lainya, tetapi juga nilai-nilai moral yang penting. Saya aktif dalam kegiatan ekstrakurikuler seperti olahraga, seni, dan kegiatan sosial, yang membantu saya mengembangkan keterampilan kepemimpinan dan kerjasama.
-          </div>
+  <div class="content_box">
+    <div class="content">
+      <h2>SDN Karangtalun 03</h2>
+      <p>
+        Saya mengawali perjalanan pendidikan formal saya di SDN Karangtalun 03 pada tahun 2011 dan menyelesaikannya pada tahun 2017. 
+        Selama enam tahun itu, saya mendapatkan berbagai pengalaman dan pembelajaran yang sangat berharga. SDN Karangtalun 03 adalah tempat di mana saya pertama kali mengenal dunia pendidikan formal, bertemu dengan teman-teman sebaya, dan merasakan atmosfer belajar yang penuh kegembiraan. 
+        Selain itu, guru-guru yang berdedikasi di sekolah ini membantu saya memahami dasar-dasar ilmu pengetahuan dan keterampilan dasar. Ini adalah masa di mana saya mulai membangun fondasi pendidikan saya yang akan berguna dalam perjalanan pendidikan selanjutnya. Pendidikan di SDN Karangtalun 03 telah membantu saya tumbuh dan berkembang sebagai individu yang lebih baik, siap menghadapi tantangan pendidikan yang lebih tinggi di masa depan.
       </div>
-  </div>
-
-      <div class="slide2">
-        <img src="SMP.png" alt="Deskripsi Gambar">
-        <div class="slide1-container">
-            <div class="container-title">SMP NEGERI 08 CILACAP</div>
-            <div class="container-text">
-              Pada tahun 2017, saya mulai bersekolah di SMPN 08 Cilacap. Selama tiga tahun di sekolah ini, saya terus mengembangkan pengetahuan akademis dan keterampilan sosial. Saya aktif dalam berbagai kegiatan ekstrakurikuler, termasuk klub olahraga dan organisasi siswa.
-            </div>
+  
+      <div class="content">
+        <h2>SMPN 8 Cilacap</h2>
+        <p>
+          Pada tahun 2017, saya melanjutkan perjalanan pendidikan saya di SMPN 8 Cilacap. 
+          Tiga tahun berikutnya, dari 2017 hingga 2020, saya menghabiskan waktu belajar di sekolah ini. 
+          SMPN 8 Cilacap adalah tempat di mana saya mengalami perubahan signifikan dalam aspek pendidikan dan perkembangan pribadi. 
+          Di sini, saya mulai menghadapi tantangan akademik yang lebih kompleks dan mendalam. Guru-guru yang berpengalaman membimbing saya dalam memahami mata pelajaran dengan lebih baik, dan saya juga mulai mengembangkan minat dan bakat dalam berbagai bidang. Selain itu, saya juga menjalin hubungan yang erat dengan teman-teman sebaya yang akan menjadi sahabat sepanjang hidup. Pendidikan di SMPN 8 Cilacap memberikan fondasi yang kokoh bagi perjalanan pendidikan saya yang lebih lanjut, dan pengalaman di sekolah ini akan selalu menjadi bagian berharga dalam memori pendidikan saya.
+        </p>
         </div>
-  </div>
-
-      <div class="slide3">
-          yo
-  </div>
-      <div class="slide4">
-          wi
-  </div>
-</div>
+  
+        <div class="content">
+          <h2>SMKN Nusawungu</h2>
+          <p>
+            Pada tahun 2017, saya memulai perjalanan pendidikan lanjutan di SMKN Nusawungu dengan jurusan Teknik Instalasi Tenaga Listrik (TITL). Selama enam tahun, dari 2017 hingga 2023, saya mendalami bidang yang sangat menarik ini. Di sekolah ini, saya mendapatkan pengetahuan mendalam tentang sistem tenaga listrik, instalasi, perawatan, dan pemeliharaan peralatan listrik. Guru-guru berpengalaman dalam bidang ini memberikan panduan yang berharga dalam menguasai keterampilan teknis yang diperlukan. Selain itu, saya juga terlibat dalam berbagai proyek praktik yang memberi saya pengalaman nyata dalam bekerja dengan peralatan listrik. SMKN Nusawungu tidak hanya memberikan pendidikan teknis yang solid, tetapi juga mengembangkan keterampilan kepemimpinan, teamwork, dan etika kerja yang penting. Selama waktu ini, saya juga menghadapi ujian dan tantangan akademik yang memperkuat kemampuan belajar saya. Ini adalah masa di mana saya mulai merancang masa depan karier saya di dunia tenaga listrik. Pendidikan di SMKN Nusawungu dengan jurusan TITL telah mempersiapkan saya untuk melangkah lebih jauh dalam dunia teknik listrik dan siap menghadapi tantangan di masa depan.
+          </p>
+          </div>
+  
+          <div class="content">
+            <h2>Politeknik Negeri Cilacap</h2>
+            <p>
+              Pada tahun 2023, saya melanjutkan pendidikan tingkat lebih tinggi di Politeknik Negeri Cilacap dengan program studi D3-Teknik Listrik. 
+              Selama tiga tahun berikutnya, dari 2023 hingga 2026, saya mendalami bidang yang sangat spesifik ini dengan tekun. 
+              Politeknik Negeri Cilacap telah menjadi wadah yang memungkinkan saya untuk mengeksplorasi lebih dalam tentang teknik listrik dan sistem tenaga. 
+              Di sini, saya mendapatkan pemahaman yang lebih mendalam tentang perancangan, instalasi, pemeliharaan, dan manajemen sistem tenaga listrik. Dosen-dosen yang berpengalaman di industri membimbing saya dalam memahami konsep-konsep kompleks dalam bidang ini dan memberikan pelatihan praktis yang sangat berharga. Selama masa kuliah, saya juga terlibat dalam proyek-proyek riset dan praktikum yang mengasah keterampilan teknis saya. Pendidikan di Politeknik Negeri Cilacap telah mempersiapkan saya untuk menghadapi dunia kerja yang berfokus pada teknik listrik dan membuka peluang karier yang menarik di bidang ini. Ini adalah langkah penting dalam perjalanan pendidikan dan karier saya.
+            </p>
+            </div>
     
       <!-- Include ionicons -->
       <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.3/dist/ionicons.js"></script>
