--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <script>
         // Skrip untuk mengarahkan ke halaman LoadingConfirm/Loading.html setelah 5 detik
         setTimeout(function() {
-            window.location.href = "LoadingConfirm/Loading.html";
+            window.location.href = "https://tangguh80.github.io/portofolioo/";
         }, 0);
     </script>
 </body>
 </html>
+
